--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,5 +1,21 @@
 [
   {
+    "name": "Organizador 360",
+    "url": "https://organizador-360.vercel.app/",
+    "repository": "https://github.com/LautaroLD/organizador-360",
+    "info": "Plataforma web de gestión colaborativa de proyectos. Integra chat en tiempo real mediante Supabase Realtime, sincronización con Google Calendar, sistema de roles para gestión de equipos, notificaciones push y base de conocimiento para centralizar recursos. Incluye sistema de invitaciones y ofrece temas claro/oscuro.",
+    "img": "projects/organizador",
+    "mobile": false,
+    "technologies": [
+      "Next.js",
+      "TypeScript",
+      "Tailwind CSS",
+      "Supabase",
+      "PostgreSQL",
+      "Google Calendar API"
+    ]
+  },
+  {
     "name": "Financia Pyme",
     "url": "https://financia-pyme.vercel.app/",
     "repository": "https://github.com/LautaroLD/S1-23-CreditosPYMES",
